--- a/PRODUCTOS.html
+++ b/PRODUCTOS.html
@@ -154,7 +154,7 @@
     <!-- tabla cuerpo -->
     <tbody>
       <tr>        
-        <td><img class="img-fluid" src="assets/img/portfolio/preguntas.png" width="200 px" height="300 px" /></td>
+        <td><img class="img-fluid" src="" width="200 px" height="300 px" /></td>
         <td>john@example.com</td>
         <td>
           <a href="" class="btn btn-sm btn-success mb-2" data-bs-toggle="modal" data-bs-target="#myModal">Vender</a>
